--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<meta name="description" content="A personal website built and deployed by Eashan Bajaj.">
 		<!-- Meta Keyword -->
 		<meta name="keywords" content="portfolio">
+		<meta property="og:image" content=”img/eashan.png” />
 		<!-- meta character set -->
 		<meta charset="UTF-8">
 		<!-- Site Title -->
@@ -545,7 +546,6 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 			<script src="js/vendor/jquery-2.2.4.min.js"></script>
 			<script src="js/popper.min.js"></script>
 			<script src="js/vendor/bootstrap.min.js"></script>
-			<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBhOdIF3Y9382fqJYt5I_sswSrEw5eihAA"></script>
   			<script src="js/easing.min.js"></script>
 			<script src="js/hoverIntent.js"></script>
 			<script src="js/superfish.min.js"></script>
