--- a/about.html
+++ b/about.html
@@ -11,6 +11,7 @@
 		<meta name="description" content="A personal website built and deployed by Eashan Bajaj.">
 		<!-- Meta Keyword -->
 		<meta name="keywords" content="portfolio">
+		<meta property="og:image" content=”img/eashan.png” />
 		<!-- meta character set -->
 		<meta charset="UTF-8">
 		<!-- Site Title -->
@@ -85,7 +86,7 @@
 						<div class="col-lg-12 pt-60">
 							<p>At the beginning of 2019, I didn't know where my life was going. After some serious self-reflection about my passions and interests, I committed to learning everything I could about machine learning, data science, and the tech industry.</p><p>
 
-								After graduating with a bachelors in Computer Science from TSEC (Mumbai) and almost a year of working at OMIC Health (HealthTech startup), I have officially become a Founding team member & Software Engineer at BimaPe (InsurTech startup). Here I am utilizing my knowledge of machine learning engineering and agile methodologies to build intelligent systems and products to simplify this complicated insurance sector.
+								After graduating with a bachelors in Computer Science from TSEC (Mumbai) and almost a year of working at OMIC Health (HealthTech startup), I have officially become a Founding team member & Software Engineer at BimaPe (InsurTech startup). Here I am utilizing my knowledge of machine learning engineering and agile methodologies to build intelligent systems and products to simplify the complicated insurance sector.
 
 						</p>
 
@@ -162,7 +163,7 @@
 				 <li>
 					 <div class="content">
 						 <h4>
-							 <time>Founding Member & Software Engneer</time>
+							 <time>Founding Member & Software Engineer</time>
 						 </h4>
 						 <p><b>BimaPe</b></p>
 						 <p>Aug 2020 - Present</p>
@@ -296,7 +297,6 @@
 			<script src="js/vendor/jquery-2.2.4.min.js"></script>
 			<script src="js/popper.min.js"></script>
 			<script src="js/vendor/bootstrap.min.js"></script>
-			<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBhOdIF3Y9382fqJYt5I_sswSrEw5eihAA"></script>
   			<script src="js/easing.min.js"></script>
 			<script src="js/hoverIntent.js"></script>
 			<script src="js/superfish.min.js"></script>
