--- a/index.html
+++ b/index.html
@@ -460,8 +460,8 @@
 						</div>
 					</div>
 					<div class="row">
-						<div class=" col-lg-12 col-md-12 single-price">
-							<a href="https://github.com/Ebajaj147">
+						<div class=" col-lg-6 col-md-6 single-price">
+							<a href="https://github.com/Ebajaj147" target="_blank">
 							<div class="top-part">
 								<img src="img/github.jpg" height=300 width=300>
 								<h4>GitHub</h4>
@@ -471,17 +471,17 @@
 
 
 						</div>
-						<!-- <div class="col-lg-6 col-md-6 single-price">
-							<a href="">
+						<div class="col-lg-6 col-md-6 single-price">
+							<a href="https://eashanbajaj786.wixsite.com/mocs" target="_blank">
 							<div class="top-part">
-								<img src="img/medium3.jpg" height=300 width=300>
-								<h4>Medium</h4>
+								<img src="img/eb.jpeg" height=300 width=300>
+								<h4>Personal Blog</h4>
 								<p class="mt-10">Where I write stuff. </p>
 							</div>
 						</a>
 
 
-						</div> -->
+						</div>
 
 
 					</div>
