--- a/index.html
+++ b/index.html
@@ -87,11 +87,11 @@
 									 A few interesting things about me. I have been writing code since the age of 15 years. Outside of work, I am a state level snooker and billiards player. I love to play competitive strategy games and first-person shooters. Lastly, I love learning. Every day I push myself to learn something new, whether that be about machine learning, software engineering, or miscellaneous facts about the universe.
 								</p>
 								<p class="fz-16">
-									 I recently dropped a lucrative management consulting offer to join the startup world. I'm the Lead Software Engineer at BimaPe (InsurTech startup) for 'Know Your Insurance'. My work mainly revolves around utilizing natural language processing and machine learning to reduce complicated insurance policy documents into jargon free snapshots.
+									 I recently dropped a lucrative management consulting offer to join the startup world. I'm the Lead Software Engineer/Product Manager at BimaPe (InsurTech startup). My work mainly revolves around utilizing natural language processing and machine learning to reduce complicated insurance policy documents into jargon free snapshots. Besides this, I also build products that have a direct correlation with our revenue, all the way from start to end of their lifecycle. 
 								</p>
 
 							</blockquote>
-							<a href="about" class="primary-btn text-uppercase">About me</a>
+							<a href="about.html" class="primary-btn text-uppercase">About me</a>
 
 					</div>
 				</div>
@@ -420,10 +420,30 @@
 				</p>
 			</div>
 
-			<div class="single-recent-blog col-lg-4 col-md-4">
+			<!-- <div class="single-recent-blog col-lg-4 col-md-4">
 				<div class="thumb">
 					<a href="https://github.com/Ebajaj147/PyDa-assistant" target="_blank">
 					<img class="f-img img-fluid" src="img/PyDa.jpeg" alt="">
+				</a>
+				</div>
+				<div class="bottom d-flex justify-content-between align-items-center flex-wrap"> -->
+
+					<!-- <div class="meta">
+						Dec 2, 2019
+					</div> -->
+				<!-- </div>
+				<a href="https://github.com/Ebajaj147/PyDa-assistant" target="_blank">
+					<h4>Py-Da: Your virtual assistant (Python)</h4>
+				</a>
+				<p>
+					Py-Da is a virtual voice recognition assistant that accesses Wikipedia & Wolfram Alpha to accurately answer the user's queries.
+				</p>
+			</div> -->
+
+			<div class="single-recent-blog col-lg-4 col-md-4">
+				<div class="thumb">
+					<a href="https://github.com/Ebajaj147/Customer-Segmentation-Kmeans-Clustering" target="_blank">
+					<img class="f-img img-fluid" src="img/kmeans.jpeg" alt="">
 				</a>
 				</div>
 				<div class="bottom d-flex justify-content-between align-items-center flex-wrap">
@@ -433,12 +453,13 @@
 					</div> -->
 				</div>
 				<a href="https://github.com/Ebajaj147/PyDa-assistant" target="_blank">
-					<h4>Py-Da: Your virtual assistant (Python)</h4>
+					<h4>Customer Segmentation: K-Means Clustering</h4>
 				</a>
 				<p>
-					Py-Da is a virtual voice recognition assistant that accesses Wikipedia & Wolfram Alpha to accurately answer the user's queries.
+					Segmentation and analysis of real world e-commerce data for a customer database using K-means.
 				</p>
 			</div>
+
 		</div>
 	</div>
 </section>
