BimaPe to VERAK transition

--- a/about.html
+++ b/about.html
@@ -86,7 +86,7 @@
 						<div class="col-lg-12 pt-60">
 							<p>At the beginning of 2019, I didn't know where my life was going. After some serious self-reflection about my passions and interests, I committed to learning everything I could about machine learning, data science, and the tech industry.</p><p>
 
-								After graduating with a Bachelors in Computer Science from TSEC (Mumbai) and almost a year of working at OMIC Health (HealthTech startup), I have officially become a Founding team member & Software Engineer/Product Manager at BimaPe (InsurTech startup). Here I am utilizing my knowledge of machine learning engineering and agile methodologies to build intelligent systems and products to simplify the complicated insurance sector.
+								After graduating with a Bachelors in Computer Science from TSEC (Mumbai) and almost a year of working at OMIC Health (HealthTech startup), I have officially become a Founding team member & Software Engineer/Product Manager at VERAK (InsurTech startup, prev. BimaPe). Here I am utilizing my knowledge of machine learning engineering and agile methodologies to build intelligent systems and products to simplify the complicated insurance sector.
 
 						</p>
 
@@ -165,7 +165,7 @@
 						 <h4>
 							 <time>Founding Member & Software Engineer</time>
 						 </h4>
-						 <p><b>BimaPe</b></p>
+						 <p><b>VERAK (prev. BimaPe)</b></p>
 						 <p>Aug 2020 - Present</p>
 					 </div>
 				 </li>
