--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 									 A few interesting things about me. I have been writing code since the age of 15 years. Outside of work, I am a state level snooker and billiards player. I love to play competitive strategy games and first-person shooters. Lastly, I love learning. Every day I push myself to learn something new, whether that be about machine learning, software engineering, or miscellaneous facts about the universe.
 								</p>
 								<p class="fz-16">
-									 I recently dropped a lucrative management consulting offer to join the startup world. I'm the Lead Software Engineer/Product Manager at BimaPe (InsurTech startup). My work mainly revolves around utilizing natural language processing and machine learning to reduce complicated insurance policy documents into jargon free snapshots. Besides this, I also build products that have a direct correlation with our revenue, all the way from start to end of their lifecycle. 
+									 I recently dropped a lucrative management consulting offer to join the startup world. I'm the Lead Software Engineer/Product Manager at VERAK (InsurTech startup, prev. BimaPe). My work mainly revolves around utilizing natural language processing and machine learning to reduce complicated insurance policy documents into jargon free snapshots. Besides this, I also build products that have a direct correlation with our revenue, all the way from start to end of their lifecycle. 
 								</p>
 
 							</blockquote>
