--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
 							<h2 class="mt-10 mb-20">Eashan Bajaj</h2>
 							<p>
-								Ruminative coder and analyst. Inspired by tough problems.
+								Ruminative coder and analyst by heart, Product Manager by profession. Inspired by tough problems.
 							</p>
 							<a href="https://github.com/Ebajaj147" class="primary-btn text-uppercase mb-20">My Projects</a>
 						</div>
@@ -98,7 +98,9 @@
 									 A few interesting things about me. I have been writing code since the age of 15 years. Outside of work, I am a state level snooker and billiards player. I love to play competitive strategy games and first-person shooters. Lastly, I love learning. Every day I push myself to learn something new, whether that be about machine learning, software engineering, or miscellaneous facts about the universe.
 								</p>
 								<p class="fz-16">
-									 I recently dropped a lucrative management consulting offer to join the startup world. I'm the Lead Software Engineer/Product Manager at VERAK (InsurTech startup, prev. BimaPe). My work mainly revolves around utilizing natural language processing and machine learning to reduce complicated insurance policy documents into jargon free snapshots. Besides this, I also build products that have a direct correlation with our revenue, all the way from start to end of their lifecycle. 
+									 I recently dropped a lucrative management consulting offer to join the startup world. I'm a Software Engineer turned first Product Manager at VERAK (InsurTech startup, prev. BimaPe YC W21). I've built and designed the VERAK (YC W21) platform along with the products that sit on it and interconnect with each other. These products have a direct correlation with our revenue, all the way from start to end of their lifecycle.
+									 <br>
+									 Previously I was the Lead Software Engineer and my work mainly revolved around utilizing natural language processing and machine learning to reduce complicated insurance policy documents into jargon free snapshots. 
 								</p>
 
 							</blockquote>
@@ -126,15 +128,23 @@
 					<div class="row">
 						<div class="col-lg-4 col-md-6">
 							<div class="single-services">
-								<span class="lnr lnr-cloud-check"></span>
-								<a><h4>Cloud Compute</h4></a>
+								<span class="lnr lnr-layers"></span>
+								<a><h4>Agile Frameworks</h4></a>
 								<p>
-										I utilize AWS to develop and productionize application systems.
+									I'm always emphasizing the value of iterating quickly and often with a clear timeline in mind to satisfy clients.
 								</p>
 							</div>
 						</div>
 
-
+						<div class="col-lg-4 col-md-6">
+							<div class="single-services">
+								<span class="lnr lnr-laptop-phone"></span>
+								<a><h4>Collaboration</h4></a>
+								<p>
+									I enjoy working with my team to set product deliverables and create winning strategies.
+								</p>
+							</div>
+						</div>
 
 						<div class="col-lg-4 col-md-6">
 							<div class="single-services">
@@ -156,25 +166,16 @@
 							</div>
 						</div>
 
+							<div class="col-lg-4 col-md-6">
+								<div class="single-services">
+									<span class="lnr lnr-cloud-check"></span>
+									<a><h4>Cloud Compute</h4></a>
+									<p>
+											I utilize AWS to develop and productionize application systems.
+									</p>
+								</div>
+							</div>
 
-						<div class="col-lg-4 col-md-6">
-							<div class="single-services">
-								<span class="lnr lnr-layers"></span>
-								<a><h4>Agile Frameworks</h4></a>
-								<p>
-									I'm always emphasizing the value of iterating quickly and often to satisfy customers.
-								</p>
-							</div>
-						</div>
-						<div class="col-lg-4 col-md-6">
-							<div class="single-services">
-								<span class="lnr lnr-laptop-phone"></span>
-								<a><h4>Collaboration</h4></a>
-								<p>
-									I enjoy working with my team to create winning strategies.
-								</p>
-							</div>
-						</div>
 						<div class="col-lg-4 col-md-6">
 							<div class="single-services">
 								<span class="lnr lnr-chart-bars"></span>
@@ -212,58 +213,24 @@
 
 <div class="container">
 		<div class="row skillbar-wraps">
-			<div class="col-lg-4 skill-left">
-				<h4 class="text-center pt-50"> Devops </h4>
-				<div class="single-skill">
-					<p>
-						Databases (SQL / MongoDB / Postgres / Firebase / Oracle) 
-					</p>
-					<!-- <div class="skill" data-width="80"></div> -->
-				</div>
-
-				<div class="single-skill">
-					<p>
-						Cloud services (Google Cloud Platform (GCP) / AWS)
-					</p>
-					<!-- <div class="skill" data-width="80"></div> -->
-				</div>
-
-				<div class="single-skill">
-					<p>
-						Big Data (HIVE / Hadoop) 
-					</p>
-					<!-- <div class="skill" data-width="60"></div> -->
-				</div>
-
-				<div class="single-skill">
-					<p>
-						GitHub
-					</p>
-					<!-- <div class="skill" data-width="60"></div> -->
-				</div>
-			</div>
-
-
-
-
 			<div class="col-lg-4 skill-right">
-				<h4 class="text-center pt-50">Machine Learning</h4>
+				<h4 class="text-center pt-50">Product Management</h4>
 				<div class="single-skill">
 					<p>
-						Python 
+						Agile Methodologies (Kanban / Scrum)
 					</p>
 					<!-- <div class="skill" data-width="100"></div> -->
 				</div>
 				<div class="single-skill">
 					<p>
-						NLP (Spacy)
+						Design (Figma)
 					</p>
 					<!-- <div class="skill" data-width="60"></div> -->
 				</div>
 
 				<div class="single-skill">
 					<p>
-						Computer Vision (Open CV / TensorFlow) 
+						Management (Trello / Linear / Notion)
 					</p>
 					<!-- <div class="skill" data-width="60"></div> -->
 				</div>
@@ -297,29 +264,32 @@
 
 			</div>
 
+
 			<div class="col-lg-4 skill-right">
-				<h4 class="text-center pt-50">Product Management</h4>
+				<h4 class="text-center pt-50">Machine Learning</h4>
 				<div class="single-skill">
 					<p>
-						Agile Methodologies 
+						Python 
 					</p>
 					<!-- <div class="skill" data-width="100"></div> -->
 				</div>
 				<div class="single-skill">
 					<p>
-						Design (Figma)
+						NLP (Spacy)
 					</p>
 					<!-- <div class="skill" data-width="60"></div> -->
 				</div>
 
 				<div class="single-skill">
 					<p>
-						Management (Trello / Linear)
+						Computer Vision (Open CV / TensorFlow) 
 					</p>
 					<!-- <div class="skill" data-width="60"></div> -->
 				</div>
 
 			</div>
+
+			
 
 			<div class="col-lg-4 skill-right">
 				<h4 class="text-center pt-50"> Backend </h4>
@@ -327,6 +297,13 @@
 				<div class="single-skill">
 					<p>
 						Express.js
+					</p>
+					<!-- <div class="skill" data-width="80"></div> -->
+				</div>
+
+				<div class="single-skill">
+					<p>
+						Python
 					</p>
 					<!-- <div class="skill" data-width="80"></div> -->
 				</div>
@@ -366,6 +343,37 @@
 				</div>
 
 
+			</div>
+
+			<div class="col-lg-4 skill-left">
+				<h4 class="text-center pt-50"> Devops </h4>
+				<div class="single-skill">
+					<p>
+						Databases (SQL / MongoDB / Postgres / Firebase / Oracle) 
+					</p>
+					<!-- <div class="skill" data-width="80"></div> -->
+				</div>
+			
+				<div class="single-skill">
+					<p>
+						Cloud services (Google Cloud Platform (GCP) / AWS)
+					</p>
+					<!-- <div class="skill" data-width="80"></div> -->
+				</div>
+			
+				<div class="single-skill">
+					<p>
+						Big Data (HIVE / Hadoop) 
+					</p>
+					<!-- <div class="skill" data-width="60"></div> -->
+				</div>
+			
+				<div class="single-skill">
+					<p>
+						GitHub
+					</p>
+					<!-- <div class="skill" data-width="60"></div> -->
+				</div>
 			</div>
 
 		</div>
