--- a/about.html
+++ b/about.html
@@ -86,7 +86,9 @@
 						<div class="col-lg-12 pt-60">
 							<p>At the beginning of 2019, I didn't know where my life was going. After some serious self-reflection about my passions and interests, I committed to learning everything I could about machine learning, data science, and the tech industry.</p><p>
 
-								After graduating with a Bachelors in Computer Science from TSEC (Mumbai) and almost a year of working at OMIC Health (HealthTech startup), I have officially become a Founding team member & Software Engineer/Product Manager at VERAK (InsurTech startup, prev. BimaPe). Here I am utilizing my knowledge of machine learning engineering and agile methodologies to build intelligent systems and products to simplify the complicated insurance sector.
+								After graduating with a Bachelors in Computer Science from TSEC (Mumbai) and almost a year of working at OMIC Health (HealthTech startup), I have officially become a Founding team member & Software Engineer/Product Manager at VERAK (InsurTech startup, prev. BimaPe YC W21). Here I am utilizing my knowledge of machine learning engineering and agile methodologies to build intelligent systems and products to simplify the complicated insurance sector.</p><p>
+								
+									Mid July 2021, we pivoted away from our core idea and along with that I pivoted towards to being a Product Manager full time. I now handle a team of 13 engineers + designers and set deliverables with timelines for the new product releases. I've built and designed the VERAK (YC W21) platform along with the products that sit on it and interconnect with each other (sales, client and operations facing). I've been responsible for taking the platform all the way from idea to execution and we have with this been able to successfully onboard several MSMEs across different parts of India.
 
 						</p>
 
@@ -165,10 +167,19 @@
 						 <h4>
 							 <time>Founding Member & Software Engineer</time>
 						 </h4>
-						 <p><b>VERAK (prev. BimaPe)</b></p>
-						 <p>Aug 2020 - Present</p>
+						 <p><b>VERAK (prev. BimaPe YC W21)</b></p>
+						 <p>Aug 2020 - July 2021</p>
 					 </div>
 				 </li>
+				 <li>
+					<div class="content">
+						<h4>
+							<time>Founding Member & Product Manager</time>
+						</h4>
+						<p><b>VERAK (prev. BimaPe YC W21)</b></p>
+						<p>July 2021 - Present</p>
+					</div>
+				</li>
 			  </ul>
 			</section>
 			<hr id="FAQ">
