Verak details change

--- a/about.html
+++ b/about.html
@@ -88,7 +88,7 @@
 
 								After graduating with a Bachelors in Computer Science from TSEC (Mumbai) and almost a year of working at OMIC Health (HealthTech startup), I have officially become a Founding team member & Software Engineer/Product Manager at VERAK (InsurTech startup, prev. BimaPe YC W21). Here I am utilizing my knowledge of machine learning engineering and agile methodologies to build intelligent systems and products to simplify the complicated insurance sector.</p><p>
 								
-									Mid July 2021, we pivoted away from our core idea and along with that I pivoted towards to being a Product Manager full time. I now handle a team of 13 engineers + designers and set deliverables with timelines for the new product releases. I've built and designed the VERAK (YC W21) platform along with the products that sit on it and interconnect with each other (sales, client and operations facing). I've been responsible for taking the platform all the way from idea to execution and we have with this been able to successfully onboard several MSMEs across different parts of India.
+									Mid July 2021, we pivoted away from our core idea and along with that I pivoted towards to being a Product Manager full time. I now handle a team of 13 engineers + designers and set deliverables with timelines for the new product releases. I've built and designed the VERAK platform along with the products that sit on it and interconnect with each other (sales, client and operations facing). I've been responsible for taking the platform all the way from idea to execution and we have with this been able to successfully onboard several MSMEs across different parts of India.
 
 						</p>
 
